sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:30: error: not found: value n
*/while(n!=0){
        ^