sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code

def tri(){
	for(i<- 0 to 8){		
		var j:Int = i+1
		var n :Int=0
		if(!plusPetit(i,j)){
			echange(i,j)
			n=n+1
			}
	
		
	}
}

def bubbleSort()  {
/*var test : Boolean=false
for(i<- 0 to 8){
	var j : Int=i+1
	
	if(!plusPetit(i,j)){
		test = true
	}
	else{
		test= false
	}
	return test
}

*/while(n!=0){
	tri()
}

}
